specify width with percentage to prevent overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ body {
     text-align: center;
 
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 #winner-status {
